[DEV][LoiNLT] Update features: fix error get all claim not have claim_status, add limit don't allow change password admin default
