# swagger.yaml
@@ -1167,7 +1167,7 @@ paths:
                             example: 1
   /api/contracts/get-all:
     get:
-      summary: Get all contracts or by keyword
+      summary: Get all contracts or filter by keyword
       tags:
         - Contract
       parameters:
@@ -1175,10 +1175,10 @@ paths:
           name: keyword
           schema:
             type: string
-          description: The keyword related with contract_type and description
+          description: The keyword related to contract_type and description
       responses:
         '200':
-          description: List of contract
+          description: List of contracts
           content:
             application/json:
               schema:
@@ -1194,30 +1194,30 @@ paths:
                       properties:
                         _id:
                           type: string
-                          example: 678e035aa76e35135ab726ab
-                        job_rank:
+                          example: 678f692a144cbc1e94917e72
+                        contract_type:
                           type: string
-                          example: TC3
-                        job_title:
+                          example: INDEFINITE
+                        description:
                           type: string
-                          example: Technical Consultant
+                          example: Contract no limit time.
                         is_deleted:
                           type: boolean
                           example: false
                         created_at:
                           type: string
                           format: date-time
-                          example: '2025-01-20T08:03:38.677Z'
+                          example: '2025-01-21T09:30:18.566Z'
                         updated_at:
                           type: string
                           format: date-time
-                          example: '2025-01-20T08:03:38.677Z'
+                          example: '2025-01-21T09:30:18.566Z'
                         __v:
                           type: integer
                           example: 0
   /api/departments/get-all:
     get:
-      summary: Get all department or by keyword
+      summary: Get all departments or filter by keyword
       tags:
         - Department
       parameters:
@@ -1225,7 +1225,7 @@ paths:
           name: keyword
           schema:
             type: string
-          description: The keyword related with department_code and department_name
+          description: The keyword related to department_code and department_name
       responses:
         '200':
           description: List of departments
@@ -1244,24 +1244,27 @@ paths:
                       properties:
                         _id:
                           type: string
-                          example: 678e035aa76e35135ab726ab
-                        job_rank:
+                          example: 67b6e14211fa7aaa835430a7
+                        department_code:
                           type: string
-                          example: TC3
-                        job_title:
+                          example: DE04
+                        department_name:
                           type: string
-                          example: Technical Consultant
+                          example: Department 04
+                        description:
+                          type: string
+                          example: Department 04
                         is_deleted:
                           type: boolean
                           example: false
                         created_at:
                           type: string
                           format: date-time
-                          example: '2025-01-20T08:03:38.677Z'
+                          example: '2025-02-20T08:01:06.177Z'
                         updated_at:
                           type: string
                           format: date-time
-                          example: '2025-01-20T08:03:38.677Z'
+                          example: '2025-02-20T08:01:06.177Z'
                         __v:
                           type: integer
                           example: 0
@@ -1367,6 +1370,7 @@ paths:
                 - user_id
                 - job_rank
                 - contract_type
+                - account
                 - address
                 - phone
                 - full_name
@@ -1386,6 +1390,9 @@ paths:
                 contract_type:
                   type: string
                   example: THREE YEAR
+                account:
+                  type: string
+                  example: tamoki1110
                 address:
                   type: string
                   example: '123'
@@ -1442,6 +1449,9 @@ paths:
                       contract_type:
                         type: string
                         example: THREE YEAR
+                      account:
+                        type: string
+                        example: tamoki1110
                       address:
                         type: string
                         example: '123'
